--- a/app/src/main/res/values-night/theme.xml
+++ b/app/src/main/res/values-night/theme.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <style name="Theme.Mastify" parent="Theme.AppCompat.DayNight.NoActionBar">
-    <item name="android:windowBackground">@color/black</item>
+    <item name="android:windowBackground">@color/app_background</item>
   </style>
 </resources>
