feat: Migrate systemUiController to activity edgetoedge

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.Mastify" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Theme.Mastify" parent="android:Theme.Material.Light.NoActionBar">
       <item name="android:windowBackground">@color/app_background</item>
     </style>
 </resources>
