--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,7 +17,9 @@
   -->
 
 <resources>
-    <style name="Theme.Mastify" parent="android:Theme.Material.Light.NoActionBar">
-      <item name="android:windowBackground">@color/app_background</item>
+  <style name="Theme.Mastify" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.Mastify.Splash" parent="Theme.SplashScreen">
+      <item name="windowSplashScreenBackground">@color/app_background</item>
+      <item name="postSplashScreenTheme">@style/Theme.Mastify</item>>
     </style>
 </resources>
