--- a/app/src/main/res/drawable/heart.xml
+++ b/app/src/main/res/drawable/heart.xml
@@ -1,34 +1,9 @@
-<!--
-  ~ Copyright 2024 WhiteScent
-  ~
-  ~ This file is a part of Mastify.
-  ~
-  ~ This program is free software; you can redistribute it and/or modify it under the terms of the
-  ~ GNU General Public License as published by the Free Software Foundation; either version 3 of the
-  ~ License, or (at your option) any later version.
-  ~
-  ~ Mastify is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
-  ~ the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
-  ~ Public License for more details.
-  ~
-  ~ You should have received a copy of the GNU General Public License along with Mastify; if not,
-  ~ see <http://www.gnu.org/licenses>.
-  -->
-
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="15dp"
-    android:height="15dp"
-    android:viewportWidth="15"
-    android:viewportHeight="15">
-  <group>
-    <clip-path
-        android:pathData="M0,0h15v15h-15z"/>
-    <path
-        android:pathData="M7.5,12.656C7.5,12.656 1.406,9.375 1.406,5.508C1.406,4.669 1.74,3.864 2.333,3.27C2.926,2.677 3.731,2.344 4.57,2.344C5.894,2.344 7.028,3.065 7.5,4.219C7.972,3.065 9.106,2.344 10.43,2.344C11.269,2.344 12.074,2.677 12.667,3.27C13.26,3.864 13.594,4.669 13.594,5.508C13.594,9.375 7.5,12.656 7.5,12.656Z"
-        android:strokeLineJoin="round"
-        android:strokeWidth="1.1"
-        android:fillColor="#00000000"
-        android:strokeColor="#7E8C9F"
-        android:strokeLineCap="round"/>
-  </group>
+    android:width="32dp"
+    android:height="32dp"
+    android:viewportWidth="256"
+    android:viewportHeight="256">
+  <path
+      android:pathData="M178,28c-20.09,0 -37.92,7.93 -50,21.56C115.92,35.93 98.09,28 78,28A66.08,66.08 0,0 0,12 94c0,72.34 105.81,130.14 110.31,132.57a12,12 0,0 0,11.38 0C138.19,224.14 244,166.34 244,94A66.08,66.08 0,0 0,178 28ZM172.51,170.36A328.69,328.69 0,0 1,128 202.16a328.69,328.69 0,0 1,-44.51 -31.8C61.82,151.77 36,123.42 36,94A42,42 0,0 1,78 52c17.8,0 32.7,9.4 38.89,24.54a12,12 0,0 0,22.22 0C145.3,61.4 160.2,52 178,52a42,42 0,0 1,42 42C220,123.42 194.18,151.77 172.51,170.36Z"
+      android:fillColor="#000000"/>
 </vector>
