--- a/app/src/main/res/values-night/theme.xml
+++ b/app/src/main/res/values-night/theme.xml
@@ -22,6 +22,7 @@
   </style>
   <style name="Theme.Mastify.Splash" parent="Theme.SplashScreen">
     <item name="windowSplashScreenBackground">@color/app_background</item>
+    <item name="windowSplashScreenAnimatedIcon">@drawable/splash_icon</item>
     <item name="postSplashScreenTheme">@style/Theme.Mastify</item>>
   </style>
 </resources>
