--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,6 +20,7 @@
   <style name="Theme.Mastify" parent="android:Theme.Material.Light.NoActionBar" />
     <style name="Theme.Mastify.Splash" parent="Theme.SplashScreen">
       <item name="windowSplashScreenBackground">@color/app_background</item>
+      <item name="windowSplashScreenAnimatedIcon">@drawable/splash_icon</item>
       <item name="postSplashScreenTheme">@style/Theme.Mastify</item>>
     </style>
 </resources>
