--- a/app/src/main/res/drawable/arrow_bend_up_left_bold.xml
+++ b/app/src/main/res/drawable/arrow_bend_up_left_bold.xml
@@ -21,6 +21,6 @@
     android:viewportWidth="256"
     android:viewportHeight="256">
   <path
-      android:pathData="M170.34,130.34 L204.69,96H88a48,48 0,0 0,0 96h88a8,8 0,0 1,0 16H88A64,64 0,0 1,88 80H204.69L170.34,45.66a8,8 0,0 1,11.32 -11.32l48,48a8,8 0,0 1,0 11.32l-48,48a8,8 0,0 1,-11.32 -11.32Z"
+      android:pathData="M236,200a12,12 0,0 1,-24 0,84.09 84.09,0 0,0 -84,-84H61l27.52,27.51a12,12 0,0 1,-17 17l-48,-48a12,12 0,0 1,0 -17l48,-48a12,12 0,0 1,17 17L61,92h67A108.12,108.12 0,0 1,236 200Z"
       android:fillColor="#000000"/>
 </vector>
