--- a/app/src/main/res/drawable/check_circle_fill.xml
+++ b/app/src/main/res/drawable/check_circle_fill.xml
@@ -1,26 +1,9 @@
-<!--
-  ~ Copyright 2024 WhiteScent
-  ~
-  ~ This file is a part of Mastify.
-  ~
-  ~ This program is free software; you can redistribute it and/or modify it under the terms of the
-  ~ GNU General Public License as published by the Free Software Foundation; either version 3 of the
-  ~ License, or (at your option) any later version.
-  ~
-  ~ Mastify is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
-  ~ the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
-  ~ Public License for more details.
-  ~
-  ~ You should have received a copy of the GNU General Public License along with Mastify; if not,
-  ~ see <http://www.gnu.org/licenses>.
-  -->
-
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
+    android:width="32dp"
+    android:height="32dp"
     android:viewportWidth="256"
     android:viewportHeight="256">
   <path
       android:pathData="M128,24A104,104 0,1 0,232 128,104.11 104.11,0 0,0 128,24ZM173.66,109.66 L117.66,165.66a8,8 0,0 1,-11.32 0l-24,-24a8,8 0,0 1,11.32 -11.32L112,148.69l50.34,-50.35a8,8 0,0 1,11.32 11.32Z"
-      android:fillColor="#18be64"/>
+      android:fillColor="#1cc487"/>
 </vector>
