feat: add app icon

--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -2,29 +2,51 @@
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
+    android:viewportWidth="512"
+    android:viewportHeight="512">
+  <group android:scaleX="0.69"
+      android:scaleY="0.69"
+      android:translateX="79.36"
+      android:translateY="79.36">
+    <path
+        android:pathData="M0,0h512v512h-512z"
+        android:fillColor="#3F4366"/>
+    <path
+        android:pathData="M193.21,375.6C180.12,368.57 168.46,358.97 158.33,347.89C142.12,330.14 130.89,304.99 131.7,280.24C132.29,261.97 139.66,245.45 152.15,232.65C156.14,228.57 160.77,225.18 164.86,221.19C174.56,211.72 181.72,199.01 181.92,184.89C182.13,169.45 173.54,156.66 162.3,147.37C158.24,144.03 153.7,141.38 150.12,137.43C147.77,134.84 146.94,132.52 147.12,128.95C147.27,125.96 148.49,122.91 150.71,120.96C152.23,119.64 153.91,119.5 155.82,119.75C163.48,120.75 181.17,138.99 186.17,145.47C196.7,159.12 201.45,175.51 199.46,192.96C198.61,200.51 196.56,207.79 193.03,214.48C187.38,225.15 178.41,233.84 169.73,241.81C164.84,246.3 159.46,250.87 156.16,256.81C148.76,270.14 147.32,286.59 151.23,301.29C156.71,321.92 170.4,337.47 185.41,351.31L191.97,357.11C193.11,358.09 194.35,359.4 195.66,360.09L196,360.24L193.21,375.6Z">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="228.02"
+            android:startY="200.2"
+            android:endX="113.45"
+            android:endY="289.78"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFF09E69"/>
+          <item android:offset="1" android:color="#FFF3777A"/>
+        </gradient>
+      </aapt:attr>
     </path>
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M308.13,166.64C312.3,168.34 316.15,170.66 320.04,172.95C342.59,186.19 361.09,207.25 371.44,231.95C382.71,258.84 384.35,288.81 373.78,316.22C362.32,345.98 339.81,368.87 311.52,381.18C292.58,389.43 273.57,391.75 253.19,391.32L253.85,372.83C255.44,358.47 261.44,345.02 272.14,335.55C275.88,332.25 280.08,329.58 284.22,326.88C294.3,320.3 305.09,314.52 314.36,306.76C332.78,291.35 347.59,270.52 350.01,245.47C352.53,219.42 338.91,194.96 321.34,177.57C319.29,175.53 317.12,173.65 314.82,171.92C312.92,170.5 309.92,169.11 308.54,167.23L308.13,166.64Z">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="376.4"
+            android:startY="244.72"
+            android:endX="220.21"
+            android:endY="314.78"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFF5C35B"/>
+          <item android:offset="1" android:color="#FFEB7D74"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <path
+        android:pathData="M196,360.24C202.8,331.4 217.44,307.74 240.69,290.27C249.13,283.92 258.07,278.8 265.93,271.58C273.66,264.48 282.63,254.19 283.19,242.96C283.34,239.93 283.56,234.98 281.31,232.69C277.64,228.95 272.79,232.28 268.86,233.49C266.24,234.29 263.59,234.73 260.86,234.91C255.62,235.28 249.25,233.25 245.28,229.57C242.17,226.68 239.92,222.8 239.79,218.38C239.64,213.68 241.53,209.16 242.27,204.59C242.86,200.95 242.83,197.19 243.19,193.51C243.77,187.71 246.35,182.31 250,177.92C251.71,175.86 253.73,174.08 255.47,172.04C257.3,169.9 257.49,166.9 257.61,164.17C257.87,157.86 256.55,150.91 256.05,144.59L254.89,124.41L261.67,129.72C265.4,132.18 268.78,135.64 272.21,138.54C282.62,147.35 292.84,157 303.9,164.87L308.13,166.64L308.54,167.23C309.92,169.11 312.92,170.5 314.82,171.92C317.12,173.65 319.29,175.53 321.34,177.57C338.91,194.96 352.53,219.42 350.01,245.47C347.59,270.52 332.78,291.35 314.36,306.76C305.09,314.52 294.3,320.3 284.22,326.88C280.08,329.58 275.88,332.25 272.14,335.55C261.44,345.02 255.44,358.47 253.85,372.83L253.19,391.32C232.82,390.97 211.34,385.11 193.21,375.6L196,360.24Z"
+        android:fillColor="#FEFEFE"/>
+    <path
+        android:pathData="M252.79,189.1L253.51,189.13C254.59,190.39 254.87,191.83 255.7,193.22L257.76,193.3C259.02,193.45 259.82,194.3 260.56,195.32C261.81,197.05 262.01,199.64 261.57,201.73C261.1,204.02 259.63,205.2 257.81,206.36C255.78,206.77 253.21,206.79 251.41,205.6C250.34,204.89 249.91,203.74 249.63,202.51C248.97,199.5 250.66,196.17 251.42,193.31C251.82,191.81 251.94,190.42 252.79,189.1Z"
+        android:fillColor="#ED9B74"/>
+    <path
+        android:pathData="M261.67,129.72C265.4,132.18 268.78,135.64 272.21,138.54C282.62,147.35 292.84,157 303.9,164.87C301.28,164.81 298.64,163.34 296.18,162.45L287.02,159.44L273.03,154.66C272.52,154.47 270.01,153.73 269.74,153.39C269.45,153.02 269.31,151.79 269.2,151.29L267.75,144.66C266.46,139.16 264.21,134.67 261.67,129.72Z"
+        android:fillColor="#FBBA65"/>
+  </group>
 </vector>
